# groupjunior25022025FastAPI

./: .env-example  Makefile  README.md  docker  docker-compose.yaml  pyproject.toml
.github/workflows/: linters.yaml
backend_api/: Dockerfile  Makefile  main.py  pyproject.toml
backend_api/app/: Makefile  app_factory.py  main.py
backend_api/app/applications/: app_factory.py  settings.py
backend_api/app/applications/auth/: auth_handler.py  router.py  security.py  test.py
backend_api/app/applications/database/: base_models.py  session_dependencies.py
backend_api/app/applications/products/: crud.py  models.py  router.py  schemas.py
backend_api/app/applications/users/: crud.py  models.py  router.py  shemas.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 13dcc1a81231_add_product.py  4afc66eed6cd_add_user_verifications_fields.py  4f69c6227d79_add_user_verifications_fields.py  74948fb73ca1_create_users_table.py  8843e88d2a23_add_users_table.py  91f6124b604b_cart.py
backend_api/app/services/rabbit/: rabbitmq_service.py
backend_api/app/services/s3/: s3.py
documentation/: mkdocs.yml
frontend/: Dockerfile  pyproject.toml
frontend/app/: app_factory.py  settings.py
frontend/app/backend_api/: api.py
frontend/app/routers/: main_page_router.py
frontend/app/templates/: login.html  product_detail.html  register.html
notification_service/: Dockerfile  pyproject.toml
notification_service/app/: main.py  settings.py
notification_service/app/templates/: user_register.html
notification_service/app/utils/: email_sender.py
(+6 files in other folders)
