[project]
name = "groupjunior25022025fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "sunleees",email = "koyfplaton@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "weborganiser (>=0.2.7,<0.3.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
